# audit-userspace

./: configure.ac
audisp/plugins/: Makefile.am
audisp/plugins/syslog-obfuscator/: Makefile.am  audisp-syslog-obfuscator.c  filepath_obfuscating.conf  obfuscator_config.c  obfuscator_config.h  syslog-obfuscator.conf
